# finetune-setup-example

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  Dockerfile  README.md  pyproject.toml  requirements.txt  skypilot-forward-rule.yaml  vocab.json
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand  postCreateCommand  postCreateCommand.sh  postStartCommand
.github/instructions/: guidelines.md.instructions.md  instructions.md
dev-pyproject/: pyproject.toml
hp_sets/: 0.yaml  1.yaml  2.yaml  3.yaml
hp_sets/diff/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml
hp_sets/full/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml
skypilot/: custom_beta.Dockerfile  finetune_setup_example.yaml
skypilot-conf/: bert_qa.job.yaml  bert_qa.yaml  custom_beta.Dockerfile  docker-bake.hcl  finetune_setup_example.yaml  http-add-on-values.yaml  job.yaml  keda-values.yaml  master-bake.hcl  master.Dockerfile  test.job.yaml
skypilot-conf/helm/: Chart.yaml  values.yaml
skypilot-conf/helm/charts/skypilot-nightly/: Chart.yaml  values.yaml
skypilot-conf/helm/charts/skypilot-nightly/templates/: _helpers.tpl  api-configmap.yaml  api-deployment.yaml  api-service.yaml  ingress.yaml
skypilot-conf/helm/templates/: _helpers.tpl  api-configmap.yaml  api-deployment.yaml  backend.yaml  frontend.yaml  interceptor-backend.yaml  interceptor-cert.yaml  interceptor-frontend.yaml  interceptor-ingress.yaml  scaler.yaml  service.yaml
skypilot-conf/kube-yamls/: interceptor-service.yaml
src/: __main__.py  _version.py  example.Dockerfile  example.compose.yaml  example.py  fine_tune_mms_on_common_voice.py  mms_blog_post.Dockerfile  mms_blog_post.a100.job.yaml  mms_blog_post.a100_x2.job.yaml  mms_blog_post.b200.job.yaml  mms_blog_post.bake.hcl  mms_blog_post.compose.yaml  mms_blog_post.cuda.job.yaml  mms_blog_post.h100.job.yaml  mms_blog_post.h200.job.yaml  mms_blog_post.hp_main.py  mms_blog_post.job.yaml  mms_blog_post.mi300x.job.yaml  mms_blog_post.py  mms_blog_post.rocm.job.yaml  pyspy_download.py  pyspy_upload.py  train.Dockerfile  train.compose.yaml  train.py
src/finetune_setup_example/: __init__.py  experiment_utils.py  git_utils.py  hp_set_handling.py  init_utils.py  job_utils.py  local_job_utils.py  printing_utils.py  remote_job_utils.py  s3_utils.py
src/finetune_setup_example/custom_datasets/: __init__.py  compressed.py  flac.py  lazy.py  remapped.py  resized.py  tar_s3.py
src/finetune_setup_example/custom_hf/: __init__.py  length_sampler.py  trainer.py  training_args.py
src/finetune_setup_example/custom_wav2vec2/: __init__.py  audio_utils.py  ctc_collator.py  feature_extractor.py  model_for_ctc.py  processor.py  tokenizer.py  wav2vec2_for_ctc.py
src/finetune_setup_example/mains/: __init__.py  mms_common_voice_adaptune.py
src/finetune_setup_example/specific_datasets/: __init__.py  common_voice.py  languages.py
src/finetune_setup_example/specific_metrics/: asr.py
src/finetune_setup_example/specific_wav2vec2/: __init__.py  hf_utils.py  model.py  processor.py  tokenizer.py  trainer.py
src/finetune_setup_example/tar_s3/: __init__.py
tests/: first_test.py
