[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
tag-pattern = '''^[a-z]+\/(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'''

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[tool.ruff]
line-length = 88
extend-exclude = ["src/_version.py", "dev-pyproject/*"]
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "Q",
  "I",
  "ARG",
  "ANN",
  "D",
  "PL",
  "S",
  "RUF",
  "UP",
  "TC",
  "SIM",
]
ignore = ["PLR2004", "PLR0913", "ANN401", "S101", "S311"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
analyzeUnannotatedFunctions = true
reportMissingParameterType = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportPrivateImportUsage = "warning"
extraPaths = []

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
color_output = true
show_column_numbers = true
exclude = ['^src/_version\.py$', '^dev-pyproject/.*$']

[tool.pytest.ini_options]
pythonpath = "./"

[tool.typos.files]
extend-exclude = ["**/*.env"]

[tool.uv]
python-preference = "only-managed"
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

[tool.uv.sources]
skypilot = { git = "https://github.com/AlonKellner/skypilot-beta.git", rev = "custom-stable" }

[project]
dynamic = ["version"]
name = "finetune-setup-example"
requires-python = ">=3.10.0"
authors = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
maintainers = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
description = "An experimental finetuning setup example"
readme = "README.md"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
]

dependencies = ["inquirer"]

[project.optional-dependencies]
gpu = ["flash-attn==2.7.3"]

[dependency-groups]
dev_tools = ["pytest", "pyright", "mypy"]
jobs = [
  "gitpython",
  "pyyaml",
  "types-PyYAML",
  "skypilot[kubernetes,runpod,gcp]",
]
mms_blog_post = [
  "accelerate",
  "boto3",
  "comet-ml",
  "datasets[audio]",
  "evaluate",
  "huggingface_hub",
  "jiwer",
  "llvmlite>0.36",
  "numba>0.47",
  "numpy",
  "pandas",
  "polars",
  "safetensors",
  "torch==2.6.0",
  "torchaudio",
  "transformers",
  "types-boto3-lite[s3]",
  "uroman",
  "wandb",
]
dev = [
  { include-group = "dev_tools" },
  { include-group = "mms_blog_post" },
  { include-group = "jobs" },
]

[project.urls]
Homepage = "https://alonkellner.com"
Repository = "https://github.com/AlonKellner/finetune-setup-example.git"
