[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
tag-pattern = '''^[a-z]+\/(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'''

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[tool.ruff]
line-length = 88
extend-exclude = ["src/_version.py", "dev-pyproject/*"]
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "Q",
  "I",
  "ARG",
  "ANN",
  "D",
  "PL",
  "S",
  "RUF",
  "UP",
  "TC",
  "SIM",
]
ignore = ["PLR2004", "PLR0913", "ANN401", "S101", "S311"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pythonpath = "./"

[tool.typos.files]
extend-exclude = ["**/*.env", "**/languages.py"]

[project]
dynamic = ["version"]
name = "finetune-setup-example"
requires-python = ">=3.10.0"
authors = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
maintainers = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
description = "An experimental finetuning setup example"
readme = "README.md"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
]

dependencies = ["inquirer"]

[project.optional-dependencies]
cpu = ["torch", "torchaudio"]
cuda = ["torch", "torchaudio", "cupy"]
rocm = [
  "torch",
  "torchaudio",
  "pytorch-triton-rocm>=3.3.0 ; sys_platform == 'linux'",
]
flash-attn = ["flash-attn==2.8.0.post2"]


[dependency-groups]
dev_tools = ["pytest"]
sky = ["skypilot[kubernetes,runpod,gcp]"]
jobs = ["gitpython", "pyyaml", "types-PyYAML", "python-dotenv"]
mms_blog_post = [
  "accelerate",
  "boto3",
  "comet-ml",
  "datasets[audio]<4",
  "evaluate",
  "huggingface_hub",
  "python-iso639",
  "jiwer",
  "llvmlite>0.36",
  "numba>0.47",
  "numpy",
  "pandas",
  "polars",
  "safetensors",
  "sentencepiece>=0.2.0",
  "tifffile[all]",
  "transformers",
  "types-boto3-lite[s3]",
  "uroman",
  "wandb",
  { include-group = "jobs" },
]
dev = [
  { include-group = "dev_tools" },
  { include-group = "mms_blog_post" },
  { include-group = "sky" },
]

[project.urls]
Homepage = "https://alonkellner.com"
Repository = "https://github.com/AlonKellner/finetune-setup-example.git"


[tool.uv]
package = false
python-preference = "only-managed"
link-mode = "copy"
no-build-isolation-package = ["flash-attn"]
# Prevent installing both CUDA and ROCm builds simultaneously
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }, { extra = "rocm" }]]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

[tool.uv.sources]
skypilot = { git = "https://github.com/AlonKellner/skypilot-beta.git", rev = "custom-stable" }
# Configure PyTorch sources for different accelerators
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cuda" },
  { index = "pytorch-rocm", extra = "rocm" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cuda" },
  { index = "pytorch-rocm", extra = "rocm" },
]
# ROCm-specific triton dependency
pytorch-triton-rocm = [{ index = "pytorch-rocm", extra = "rocm" }]

# Define PyTorch indexes
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
